samples/_failures_safe/1761660585_f87570_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f2945b3.c: In function ‘main’:
./samples/SAFE/__tmp_3f2945b3.c:160:16: error: missing terminating " character
  160 |         printf("Token
      |                ^~~~~~
./samples/SAFE/__tmp_3f2945b3.c:160:9: error: expected expression at end of input
  160 |         printf("Token
      |         ^~~~~~
./samples/SAFE/__tmp_3f2945b3.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f2945b3.c:160:9: error: expected declaration or statement at end of input
